kgtkr/attic/api-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  ports:
    - port: 8080
  selector:
    app.kubernetes.io/name: api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-server
    spec:
      containers:
        - image: ghcr.io/zhaofengli/attic
          name: attic
          args:
            - -f
            - /opt/attic/config.toml
            - --mode
            - api-server
          resources:
            requests:
              cpu: "100m"
              memory: "300Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /opt/attic/
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: config-volume
          configMap:
            name: attic-config
