kgtkr/attic/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - port: 443
      name: s3
      targetPort: 9000
    - port: 9001
      name: console
  selector:
    app.kubernetes.io/name: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  serviceName: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
    spec:
      containers:
        - image: quay.io/minio/minio:RELEASE.2022-05-26T05-48-41Z
          name: minio
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
          volumeMounts:
            - mountPath: /data
              name: minio-data
            - name: minio-ingress-cert
              mountPath: "/etc/minio/certs"
              readOnly: true
            - name: ca-dir
              mountPath: "/etc/minio/certs/CAs"
              readOnly: true
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /data/objects;
              mkdir -p /data/.minio.sys/buckets/objects;
              minio server /data --console-address :9001 --certs-dir=/etc/minio/certs
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
        - name: minio-ingress-cert
          secret:
            secretName: minio-ingress-cert
            defaultMode: 420
            items:
            - key: tls.crt
              path: public.crt
            - key: tls.key
              path: private.key
        - name: ca-dir
          emptyDir: {}
