kgtkr/attic/attic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - attic.kgtkr.net
      secretName: attic-ingress-cert
  rules:
    - host: attic.kgtkr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 8080
